--- a/Yummie/Storyboards/Base.lproj/Main.storyboard
+++ b/Yummie/Storyboards/Base.lproj/Main.storyboard
@@ -140,20 +140,20 @@
                                                                 <rect key="frame" x="0.0" y="34.333333333333343" width="365" height="140.66666666666666"/>
                                                                 <color key="backgroundColor" name="F9F9F9"/>
                                                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="15" minimumInteritemSpacing="0.0" id="DkZ-5n-FmT">
-                                                                    <size key="itemSize" width="375" height="145"/>
+                                                                    <size key="itemSize" width="348" height="140"/>
                                                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                                                     <inset key="sectionInset" minX="10" minY="0.10000000000000001" maxX="0.0" maxY="0.0"/>
                                                                 </collectionViewFlowLayout>
                                                                 <cells>
                                                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="4lh-Wi-MHO">
-                                                                        <rect key="frame" x="10" y="0.0" width="375" height="140.56666666666666"/>
+                                                                        <rect key="frame" x="10" y="0.33333333333333331" width="348" height="140"/>
                                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="bag-Vq-sPq">
-                                                                            <rect key="frame" x="0.0" y="0.0" width="375" height="140.56666666666666"/>
+                                                                            <rect key="frame" x="0.0" y="0.0" width="348" height="140"/>
                                                                             <autoresizingMask key="autoresizingMask"/>
                                                                         </collectionViewCellContentView>
-                                                                        <size key="customSize" width="375" height="140.56666666666666"/>
+                                                                        <size key="customSize" width="348" height="140"/>
                                                                     </collectionViewCell>
                                                                 </cells>
                                                                 <connections>
@@ -190,20 +190,20 @@
                                                                 <rect key="frame" x="0.0" y="34.333333333333314" width="365" height="313.66666666666669"/>
                                                                 <color key="backgroundColor" name="F9F9F9"/>
                                                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="15" minimumInteritemSpacing="0.0" id="lbX-zW-KJx">
-                                                                    <size key="itemSize" width="373" height="125"/>
+                                                                    <size key="itemSize" width="344" height="124"/>
                                                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                                                     <inset key="sectionInset" minX="10" minY="0.0" maxX="21" maxY="0.0"/>
                                                                 </collectionViewFlowLayout>
                                                                 <cells>
                                                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="9UO-zs-gfk">
-                                                                        <rect key="frame" x="10" y="0.0" width="373" height="125"/>
+                                                                        <rect key="frame" x="10" y="0.0" width="344" height="124"/>
                                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="NTI-QI-YjP">
-                                                                            <rect key="frame" x="0.0" y="0.0" width="373" height="125"/>
+                                                                            <rect key="frame" x="0.0" y="0.0" width="344" height="124"/>
                                                                             <autoresizingMask key="autoresizingMask"/>
                                                                         </collectionViewCellContentView>
-                                                                        <size key="customSize" width="373" height="125"/>
+                                                                        <size key="customSize" width="344" height="124"/>
                                                                     </collectionViewCell>
                                                                 </cells>
                                                                 <connections>
@@ -323,7 +323,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VEu-rM-goE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2612.9770992366412" y="-18.30985915492958"/>
+            <point key="canvasLocation" x="2612" y="-18.472906403940886"/>
         </scene>
         <!--Dish Details View Controller-->
         <scene sceneID="Cmb-zD-0wJ">
@@ -454,7 +454,7 @@
                                 <subviews>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="g0T-s3-eMi">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="684"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
                                             <outlet property="dataSource" destination="tNV-yk-HKr" id="akY-4x-yc0"/>
@@ -466,7 +466,7 @@
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Axp-Be-bXZ"/>
-                        <color key="backgroundColor" name="DFDFDF"/>
+                        <color key="backgroundColor" name="F9F9F9"/>
                         <constraints>
                             <constraint firstItem="Axp-Be-bXZ" firstAttribute="bottom" secondItem="xui-UW-zHi" secondAttribute="bottom" id="SlB-uX-c69"/>
                             <constraint firstItem="xui-UW-zHi" firstAttribute="leading" secondItem="gih-z4-R1j" secondAttribute="leading" id="YB6-3O-EUT"/>
@@ -490,8 +490,19 @@
                     <view key="view" contentMode="scaleToFill" id="pHw-om-kBs">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="du8-Yf-ahM">
+                                <rect key="frame" x="0.0" y="50" width="375" height="728"/>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="3ey-35-M00"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="3ey-35-M00" firstAttribute="bottom" secondItem="du8-Yf-ahM" secondAttribute="bottom" id="2jz-5w-pNw"/>
+                            <constraint firstAttribute="trailing" secondItem="du8-Yf-ahM" secondAttribute="trailing" id="MCw-ah-KBC"/>
+                            <constraint firstItem="du8-Yf-ahM" firstAttribute="leading" secondItem="3ey-35-M00" secondAttribute="leading" id="bWq-Cz-bpe"/>
+                            <constraint firstItem="du8-Yf-ahM" firstAttribute="top" secondItem="3ey-35-M00" secondAttribute="top" id="w6D-o0-LuG"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FoR-dk-ChP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
