--- a/Yummie/ViewControllers/Xibs/TableViewCell/Dish List/DishListTableViewCell.xib
+++ b/Yummie/ViewControllers/Xibs/TableViewCell/Dish List/DishListTableViewCell.xib
@@ -6,7 +6,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -20,13 +19,13 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0x0-K9-K68">
-                        <rect key="frame" x="0.0" y="0.0" width="238" height="98"/>
+                        <rect key="frame" x="15" y="7" width="208" height="84"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="ODE-wO-ovV">
-                                <rect key="frame" x="0.0" y="0.0" width="238" height="98"/>
+                                <rect key="frame" x="0.0" y="0.0" width="208" height="84"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DRj-ox-i8w">
-                                        <rect key="frame" x="15" y="29" width="40" height="40"/>
+                                        <rect key="frame" x="15" y="22" width="40" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="40" id="BUI-YX-8MB"/>
                                             <constraint firstAttribute="width" secondItem="DRj-ox-i8w" secondAttribute="height" multiplier="1:1" id="LEK-K9-Zm1"/>
@@ -38,23 +37,30 @@
                                         </userDefinedRuntimeAttributes>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Axc-8v-bH7">
-                                        <rect key="frame" x="65" y="29" width="173" height="40"/>
+                                        <rect key="frame" x="65" y="22" width="143" height="40"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UhJ-kk-tWh">
-                                                <rect key="frame" x="0.0" y="0.0" width="173" height="17.666666666666668"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="143" height="17.666666666666668"/>
                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7wv-6o-Q4s">
-                                                <rect key="frame" x="0.0" y="22.666666666666664" width="173" height="17.333333333333336"/>
+                                                <rect key="frame" x="0.0" y="22.666666666666664" width="143" height="17.333333333333336"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                 <color key="textColor" name="BABABA"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="5"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
                                     </stackView>
                                 </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="DRj-ox-i8w" firstAttribute="top" secondItem="Axc-8v-bH7" secondAttribute="top" id="XbD-dl-dlZ"/>
                                     <constraint firstItem="DRj-ox-i8w" firstAttribute="bottom" secondItem="Axc-8v-bH7" secondAttribute="bottom" id="s5W-UD-vSr"/>
@@ -64,10 +70,19 @@
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                         <real key="value" value="5"/>
                                     </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                        <color key="value" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                                        <size key="value" width="0.0" height="0.0"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                                        <real key="value" value="0.0"/>
+                                    </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" name="FFFFFF"/>
                         <constraints>
                             <constraint firstItem="ODE-wO-ovV" firstAttribute="leading" secondItem="0x0-K9-K68" secondAttribute="leading" id="6hg-4E-XE2"/>
                             <constraint firstAttribute="bottom" secondItem="ODE-wO-ovV" secondAttribute="bottom" id="BWx-sI-DyG"/>
@@ -76,19 +91,21 @@
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                <real key="value" value="5"/>
+                                <real key="value" value="10"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </view>
                 </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="0x0-K9-K68" secondAttribute="bottom" id="B0J-XC-v66"/>
-                    <constraint firstItem="0x0-K9-K68" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="HUE-VK-6zM"/>
-                    <constraint firstAttribute="trailing" secondItem="0x0-K9-K68" secondAttribute="trailing" id="ObT-CA-sY7"/>
-                    <constraint firstItem="0x0-K9-K68" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="R7s-ly-60l"/>
+                    <constraint firstAttribute="bottom" secondItem="0x0-K9-K68" secondAttribute="bottom" constant="7" id="B14-L3-a2g"/>
+                    <constraint firstItem="0x0-K9-K68" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="JDz-9j-Opn"/>
+                    <constraint firstItem="0x0-K9-K68" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="7" id="dec-UW-HAJ"/>
+                    <constraint firstAttribute="trailing" secondItem="0x0-K9-K68" secondAttribute="trailing" constant="15" id="qDE-G1-Xk5"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="imgFood" destination="DRj-ox-i8w" id="JuY-d9-orh"/>
                 <outlet property="lblOrder" destination="UhJ-kk-tWh" id="zpv-E1-dXH"/>
@@ -101,8 +118,8 @@
         <namedColor name="BABABA">
             <color red="0.72899997234344482" green="0.72899997234344482" blue="0.72899997234344482" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <namedColor name="FFFFFF">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
