--- a/Yummie/Storyboards/Base.lproj/Main.storyboard
+++ b/Yummie/Storyboards/Base.lproj/Main.storyboard
@@ -143,7 +143,7 @@
                                                                     <size key="itemSize" width="348" height="140"/>
                                                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                                                    <inset key="sectionInset" minX="10" minY="0.10000000000000001" maxX="0.0" maxY="0.0"/>
+                                                                    <inset key="sectionInset" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                                 </collectionViewFlowLayout>
                                                                 <cells>
                                                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="4lh-Wi-MHO">
@@ -226,7 +226,7 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FMk-mh-Yyb">
                                                 <rect key="frame" x="10" y="583" width="365" height="184"/>
                                                 <subviews>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="IrU-sv-rTW">
+                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="IrU-sv-rTW">
                                                         <rect key="frame" x="0.0" y="0.0" width="365" height="184"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chef's Specials" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EfE-xV-Tvp">
@@ -237,9 +237,9 @@
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <collectionView multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Pkr-SC-j4P">
-                                                                <rect key="frame" x="0.0" y="19.333333333333371" width="365" height="164.66666666666666"/>
+                                                                <rect key="frame" x="0.0" y="34.333333333333371" width="365" height="149.66666666666666"/>
                                                                 <color key="backgroundColor" name="F9F9F9"/>
-                                                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="0.0" id="IbM-Ca-gCZ">
+                                                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="15" minimumInteritemSpacing="0.0" id="IbM-Ca-gCZ">
                                                                     <size key="itemSize" width="384" height="60"/>
                                                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -306,6 +306,7 @@
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Yummie" id="J45-hM-tB0">
+                        <barButtonItem key="backBarButtonItem" title="  " id="1jB-bF-ITt"/>
                         <barButtonItem key="rightBarButtonItem" title="Item" image="cart.circle.fill" catalog="system" id="oG5-ne-5Yl">
                             <color key="tintColor" name="871932"/>
                             <connections>
@@ -483,20 +484,37 @@
             </objects>
             <point key="canvasLocation" x="2612" y="748"/>
         </scene>
-        <!--View Controller-->
+        <!--Dish Orders View Controller-->
         <scene sceneID="STK-Zp-wcg">
             <objects>
-                <viewController id="pKf-S3-3bm" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DishOrdersViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="pKf-S3-3bm" customClass="DishOrdersViewController" customModule="Yummie" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="pHw-om-kBs">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="du8-Yf-ahM">
                                 <rect key="frame" x="0.0" y="50" width="375" height="728"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="6v4-I3-YPL">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="728"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <connections>
+                                            <outlet property="dataSource" destination="pKf-S3-3bm" id="puH-L5-d30"/>
+                                            <outlet property="delegate" destination="pKf-S3-3bm" id="G3U-fg-PKY"/>
+                                        </connections>
+                                    </tableView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="6v4-I3-YPL" secondAttribute="trailing" id="Drv-MC-jsv"/>
+                                    <constraint firstItem="6v4-I3-YPL" firstAttribute="top" secondItem="du8-Yf-ahM" secondAttribute="top" id="Qf9-dx-jKD"/>
+                                    <constraint firstAttribute="bottom" secondItem="6v4-I3-YPL" secondAttribute="bottom" id="RP4-Ze-f0T"/>
+                                    <constraint firstItem="6v4-I3-YPL" firstAttribute="leading" secondItem="du8-Yf-ahM" secondAttribute="leading" id="Rxp-hA-pIe"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="3ey-35-M00"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" name="F9F9F9"/>
                         <constraints>
                             <constraint firstItem="3ey-35-M00" firstAttribute="bottom" secondItem="du8-Yf-ahM" secondAttribute="bottom" id="2jz-5w-pNw"/>
                             <constraint firstAttribute="trailing" secondItem="du8-Yf-ahM" secondAttribute="trailing" id="MCw-ah-KBC"/>
@@ -504,6 +522,9 @@
                             <constraint firstItem="du8-Yf-ahM" firstAttribute="top" secondItem="3ey-35-M00" secondAttribute="top" id="w6D-o0-LuG"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="6v4-I3-YPL" id="Vtc-V8-rX8"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FoR-dk-ChP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
