--- a/Yummie/ViewControllers/Xibs/CollectionViewCell/Chef's Specials/ChefsSpecialsCollectionViewCell.xib
+++ b/Yummie/ViewControllers/Xibs/CollectionViewCell/Chef's Specials/ChefsSpecialsCollectionViewCell.xib
@@ -26,34 +26,34 @@
                                 <rect key="frame" x="0.0" y="0.0" width="330" height="101"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NL3-fh-K2r">
-                                        <rect key="frame" x="10" y="24" width="53" height="53"/>
+                                        <rect key="frame" x="10" y="20.666666666666671" width="60" height="60"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="NL3-fh-K2r" secondAttribute="height" multiplier="1:1" id="H4S-KT-nmn"/>
-                                            <constraint firstAttribute="width" constant="53" id="bdZ-75-jdF"/>
+                                            <constraint firstAttribute="width" constant="60" id="bdZ-75-jdF"/>
                                         </constraints>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                <real key="value" value="10"/>
+                                                <real key="value" value="15"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="ssj-aO-Qrr">
-                                        <rect key="frame" x="73" y="24" width="257" height="53"/>
+                                        <rect key="frame" x="80" y="20.666666666666671" width="250" height="60"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c36-rK-PQi">
-                                                <rect key="frame" x="0.0" y="0.0" width="257" height="18"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="250" height="18"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                                 <color key="textColor" name="3D3C52"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="npY-dg-3F3">
-                                                <rect key="frame" x="0.0" y="18.666666666666664" width="257" height="15.666666666666664"/>
+                                                <rect key="frame" x="0.0" y="21.999999999999996" width="250" height="15.666666666666668"/>
                                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="13"/>
                                                 <color key="textColor" name="BABABA"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hYN-JX-TY2">
-                                                <rect key="frame" x="0.0" y="35" width="257" height="18"/>
+                                                <rect key="frame" x="0.0" y="42" width="250" height="18"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                 <color key="textColor" name="871932"/>
                                                 <nil key="highlightedColor"/>
